# base120

./: .gitignore  0001-Tighten-typing-for-validators-and-observability.patch  0002-Fix-observability-test-expectation-for-missing-id.patch  0003-Update-Python-environment-manager-to-use-virtual-env.patch  AAR.md  AUDIT_INDEX.md  Base120_Canonical_Model_Registry.yaml  COMMIT_AUDIT.md  COMMIT_AUDIT_BASE120_VIEW.md  DAY2_AUDIT.md  GOVERNANCE.md  LICENSE  README.md  REBASE_NOTE.md  SECURITY.md  SITREP.md  mrcc_hash_generator.sh  pyproject.toml  v1.1_freeze.sh
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: README.md  base120.yml  drift-detection.yml  governance-audit.yml  governance-classifier.yml  governance-invariants.yml  governance-version.yml  guardrails.yml  mirror-conformance.yml  verify-seed.yml
artifacts/: README.md  base120.v1.0.0.seed.json  base120.v1.0.0.seed.sha256
artifacts/golden_corpus_snapshots/: drift-report-ed054613.json  (+3 more)
base120/: cli.py  observability.py
base120.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
compliance/: base120.v1.0.0.seed.mrcc.json
docs/: consuming-base120.md  contract-units.md  corpus-contracts.md  drift-detection.md  governance-decision-tree.md  governance-implementation-summary.md  governance-migration.md  observability.md  spec-v1.0.0.md
mirrors/: CONFORMANCE_CONTRACT.md  README.md
registries/: err.json  fm.json  mappings.json  registry-hashes.json
tests/: test_cli.py  test_contract.py  test_corpus.py  test_drift.py  test_observability.py
v1.1-hci/: ARCHITECTURE.md
(+36 files in other folders)
