[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "base120"
version = "1.0.0"
description = "Deterministic governance substrate implementing the Base120 executable mental model system"
dependencies = [
  "jsonschema>=4.0"
]

[project.optional-dependencies]
test = [
  "pytest"
]

[tool.setuptools]
packages = ["base120"]
