[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "base120"
version = "1.0.0"
description = "Deterministic governance substrate implementing the Base120 executable mental model system"
dependencies = [
  "jsonschema>=4.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.4",
  "pytest-json-report>=1.5.0"
]

[project.scripts]
base120 = "base120.cli:main"

[tool.setuptools]
packages = ["base120", "base120.validators", "base120.contract"]
